issue alignment

--- a/styles/_mainAboutUs.scss
+++ b/styles/_mainAboutUs.scss
@@ -81,7 +81,7 @@
       }
 
       #aboutImage img{
-        height: 300px;
+        width: 300px;
       }
     }
 
